Fixed issue where z-index was not applied to issues details dialog

--- a/src/injected/styles/injected.scss
+++ b/src/injected/styles/injected.scss
@@ -14,7 +14,7 @@
     font-family: "Segoe UI Web (West European)", "Segoe UI", "Helvetica Neue", sans-serif;
 }
 
-div.insights-dialog-main-override {
+div.insights-dialog-main-container {
     width: 25%;
     max-width: 25%;
     min-width: 520px;
